--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
   }
 }
